--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -183,7 +183,7 @@
       </div>
       <div class="col-4 subscribe-form">
         <p class="mdt">Subscribe to All Things AGURI</p>
-        <form class="subscribe" onsubmit="alert('Thank you for subscription!\nWe will send you email about our updates.')">
+        <form ngNativeValidate class="subscribe" onsubmit="alert('Thank you for subscription!\nWe will send you email about our updates.')">
           <div>
             <label class="smt">Email address</label>
             <input class="inpu col-12 border-top-0 border-left-0 border-right-0" type="email" required>
