--- a/src/app/pages/tracking-order/tracking-order.component.html
+++ b/src/app/pages/tracking-order/tracking-order.component.html
@@ -55,6 +55,6 @@
     </div>
   </div>
   <div class="align-cen button-back">
-    <button class="btn btnlg btn-pri">Back to Order detail</button>
+    <button class="btn btnlg btn-pri" routerLink="/shop-all">Continue shopping</button>
   </div>
 </div>
