--- a/src/app/pages/check-out/check-out.component.css
+++ b/src/app/pages/check-out/check-out.component.css
@@ -31,9 +31,12 @@ div.sticky{
   margin-top:80px;
   margin-bottom:80px;
 }
-.check-box{
-
-
+ul.pay li:focus{
+  border: 1px solid blue;
+  outline: blue solid 1px;
+}
+ul.pay li{
+ margin-right: 12.5px;
 }
 
 
