--- a/src/app/pages/check-out/check-out.component.html
+++ b/src/app/pages/check-out/check-out.component.html
@@ -63,20 +63,11 @@
             <p class="mb-0">Payment Method</p>
           </div>
           <p class="mdt">Please choose the payment method</p>
-          <div class="row mb-3">
-              <div class="col-2 ps-0">
-                <img src="./assets/img/check-out/Mastercard.png"/>
-              </div>
-              <div class="col-2 ps-0">
-                <img src="./assets/img/check-out/PayPal.png"/>
-              </div>
-              <div class="col-2 ps-0">
-                <img src="./assets/img/check-out/Visa.png"/>
-              </div>
-            <div class="col-2"></div>
-            <div class="col-2"></div>
-            <div class="col-2 pe-0"></div>
-          </div>
+          <ul class="pay d-flex mb-3">
+            <li class="col-2 px-0" tabindex="0"><img src="./assets/img/check-out/Mastercard.png"/></li>
+            <li class="col-2 px-0" tabindex="0"><img src="./assets/img/check-out/PayPal.png"/></li>
+            <li class="col-2 px-0" tabindex="0"><img src="./assets/img/check-out/Visa.png"/></li>
+          </ul>
           <div class="px-0 user-input">
             <label>Card number (*)</label>
             <input class="inpu" type="text" required>
@@ -137,14 +128,6 @@
                 <p>$0</p>
               </div>
             </div>
-  <!--          <div class="row ship-fee">-->
-  <!--            <div class="col-10 ps-0">-->
-  <!--              <p>Discount (coupon)</p>-->
-  <!--            </div>-->
-  <!--            <div class="col-2 pe-0">-->
-  <!--              <p>-$7,00</p>-->
-  <!--            </div>-->
-  <!--          </div>-->
             <div class="line mb-3"></div>
             <div class="total-itm row">
               <div class="col-10 ps-0">
