--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -408,7 +408,7 @@
                   <option value="6">5 1/2</option>
                 </select>
               </div>
-              <input type="submit" class="btn btn-pri my-3" value="Add to bag" data-bs-dismiss="modal">
+              <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag" data-bs-dismiss="modal">
             </form>
             <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
@@ -468,7 +468,7 @@
             <h5 class="mb-2">Embody the beauty of impermanence</h5>
             <p class="smt mb-4">Forward-thinking fine jewelry essentials for individuals of all genders that breathe new life into classic
               silhouettes.</p>
-            <!--<button class="btn btnlg btn-pri" type="button">Shop the collection</button>-->
+            <button class="btn btnlg btn-pri" type="button">Shop the collection</button>
           </div>
         </div>
       </div>
