--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -403,9 +403,9 @@
                   <option value="6">5 1/2</option>
                 </select>
               </div>
-              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
+              <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag">
             </form>
-            <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
+            <p class="mt-2">View more detail <a class="ms-5" routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
             </a></p>
           </div>
