--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -469,7 +469,7 @@
                   <option value="6">5 1/2</option>
                 </select>
               </div>
-              <input type="submit" class="btn btn-pri my-3" value="Add to bag"  data-bs-dismiss="modal">
+              <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag"  data-bs-dismiss="modal">
             </form>
             <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
