--- a/src/app/pages/DRAFT-product-detail/product-detail-draft.component.css
+++ b/src/app/pages/DRAFT-product-detail/product-detail-draft.component.css
@@ -42,7 +42,7 @@
 }
 
 .itm{
-  margin-top:40px;
+  margin-top:20px;
   margin-bottom:10px;
 }
 .simi-left{
@@ -60,11 +60,25 @@
 }
 .review-box{
   margin-top:40px;
+  margin-bottom:60px;
 }
-
-
-
-
-
-
+/*exlore collection*/
+.more-collection{
+  background: #fff;
+}
+.collec-left{
+  position: relative;
+}
+.collec-img{
+  position:absolute;
+  bottom:0;
+}
+.collec-content{
+  margin-top:38%;
+}
+/*collapse*/
+.card {
+  background-color: #fff;
+  border: none;
+}
 
