--- a/src/app/pages/DRAFT-product-detail/product-detail-draft.component.html
+++ b/src/app/pages/DRAFT-product-detail/product-detail-draft.component.html
@@ -1,3 +1,4 @@
+<!--Product detail-->
 <div class="container">
   <!--DETAIL-->
   <div class="prod-detail">
@@ -108,59 +109,56 @@
           </div>
 
           <div class="bag">
-            <input class="btn btnlg btn-pri w-100" role="button" type="submit" value="Add to bag" data-bs-toggle="offcanvas" data-bs-target="#addtobag">
+            <input class="btn btnlg btn-pri w-100" data-bs-toggle="offcanvas" data-bs-target="#addtobag"
+                   role="button" type="submit" value="Add to bag"
+                   (click)="addToCart(item)">
             <!--OFFCANVAS ADD BAG-->
             <div class="offcanvas offcanvas-end" id="addtobag">
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title mt-3">Shopping Bag</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
-              <div class="offcanvas-body">
-                <div class="row product-add1 mb-3">
-                  <div class="col-4 ps-0">
-                    <a routerLink="#">
-                      <img src="assets/img/product-detail/add-product1.png">
-                    </a>
+
+
+              <div class="container" *ngIf="cartItem.length === 0">
+                <h5 class="text-center">Your bag is currently empty.</h5>
+              </div>
+              <div class="container" *ngIf="cartItem.length > 0">
+                <div class="offcanvas-body" *ngIf="added">
+                  <div class="line mb-3"></div>
+                  <div class="row product-add1 mb-3">
+                    <div class="col-4 ps-0">
+                      <a routerLink="/product-detail/{{added.pid}}">
+                        <img src="{{added.thumb}}">
+                      </a>
+                    </div>
+                    <div class="col-5">
+                      <p>{{added.name}}</p>
+                    </div>
+                    <div class="col-3 pe-0">
+                      x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
+                      <p>{{added.price | currency: 'USD'}}</p>
+                      <i class="fas fa-trash-alt"></i>
+                    </div>
                   </div>
-                  <div class="col-5">
-                    <p>Amel Earring</p>
+
+                  <div class="line mb-3"></div>
+                  <div class="d-flex mb-3">
+                    <p class="mdt me-auto">Total</p>
+                    <p class="mdt">{{added.price | currency: 'USD'}}</p>
                   </div>
-                  <div class="col-3 pe-0">
-                    x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
-                    <p>$5,000.00</p>
-                    <i class="fas fa-trash-alt"></i>
-                  </div>
-                </div>
-                <div class="line mb-3"></div>
-                <div class="row product-add2 mb-3">
-                  <div class="col-4 ps-0">
-                    <a routerLink="#">
-                      <img src="assets/img/product-detail/add-product2.png">
-                    </a>
-                  </div>
-                  <div class="col-5">
-                    <p>Diamons And Gold Spark Ring</p>
-                  </div>
-                  <div class="col-3 pe-0">
-                    x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
-                    <p>$6,700.00</p>
-                    <i class="fas fa-trash-alt"></i>
-                  </div>
-                </div>
-                <div class="line mb-3"></div>
-                <div class="d-flex mb-3">
-                  <p class="mdt me-auto">Total</p>
-                  <p class="mdt">$11,700.00</p>
-                </div>
-                <div class="row">
-                  <div class="col-6 ps-0">
-                    <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View bag</button>
-                  </div>
-                  <div class="col-6 pe-0">
-                    <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
+                  <div class="row">
+                    <div class="col-6 ps-0">
+                      <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View bag</button>
+                    </div>
+                    <div class="col-6 pe-0">
+                      <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
+                    </div>
                   </div>
                 </div>
               </div>
+
+
             </div>
           </div>
         </form>
@@ -489,9 +487,9 @@
         <p class="smt mb-5">Inspired by a unisex bracelet from 1971 found in the House’s archive, the AGURI's Collection
           features bold designs that play with tension, proportion and balance.</p>
       </div>
-<!--      <div class="text-center">-->
-<!--        <a routerLink="#">Shop The Collection<i class="ms-3 fa-regular fa-arrow-right"></i></a>-->
-<!--      </div>-->
+      <!--      <div class="text-center">-->
+      <!--        <a routerLink="#">Shop The Collection<i class="ms-3 fa-regular fa-arrow-right"></i></a>-->
+      <!--      </div>-->
       <div class="collec-img">
         <img src="./assets/img/product-detail/collec1.png"/>
       </div>
