--- a/src/app/pages/DRAFT-product-detail/product-detail-draft.component.css
+++ b/src/app/pages/DRAFT-product-detail/product-detail-draft.component.css
@@ -82,7 +82,15 @@
   border: none;
 }
 
-.qty {
-  font-size: 20px;
+.qty-btn {
+  width: 15px;
+  height: 15px;
+  border: none;
+  background-color: #fff;
 }
-
+.trash {
+  color: #999;
+}
+.trash:hover {
+  color: #000;
+}
