--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -434,7 +434,6 @@
   <div class="col-2"></div>
 </div>
 
-
 <!--New collection-->
 <div class="aguri-collection">
   <div class=" new-collection mbt-120 container">
@@ -485,7 +484,7 @@
           <i class="fa-regular fa-truck fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
           <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-<!--          <a class="decor-text" routerLink="#">Learn more <i class="fa-solid fa-arrow-right"></i></a>-->
+        <a class="decor-text" routerLink="#">Learn more <i class="fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-4 text-center">
@@ -501,7 +500,7 @@
           <i class="fa-regular fa-gift fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Free Gift Wrapping</p>
           <p class="smt">Your purchase comes wrapped in our Special Box packaging</p>
-<!--          <a class="decor-text" routerLink="#">Explore gift <i class="fa-solid fa-arrow-right"></i></a>-->
+        <a class="decor-text" routerLink="#">Explore gift <i class="fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
