--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--Header and Nav here-->
 <div [class]="'headnav '+(show?'nav--hidden':'')">
   <!--HEADER-->
   <header class="section top-page">
