--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -38,11 +38,13 @@
         <p class="mdt">Complimentary Shipping & Returns</p>
         <div class="line mb-3"></div>
 
-        <form>
+        <form (submit)="addToCart(item)">
           <div class=d-flex>
             <p class="mdt me-auto">Quantity</p>
             <span class="buttons_added ml-1 qty-box">
-            <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+            <button class="qty-btn" (click)="downQty()">-</button>
+            <input class="mx-2 input-qty" [(ngModel)]="qty" [ngModelOptions]="{standalone: true}" [value]="qty" required>
+            <button class="qty-btn" (click)="upQty()">+</button>
           </span>
           </div>
           <div class="line mb-3"></div>
@@ -115,59 +117,57 @@
           </div>
 
           <div class="bag">
-            <input class="btn btnlg btn-pri w-100" role="button" type="submit" value="Add to bag" data-bs-toggle="offcanvas" data-bs-target="#addtobag">
+            <input class="btn btnlg btn-pri w-100" data-bs-toggle="offcanvas" data-bs-target="#addtobag"
+                   role="button" type="submit" value="Add to bag">
             <!--OFFCANVAS ADD BAG-->
             <div class="offcanvas offcanvas-end" id="addtobag">
               <div class="offcanvas-header">
                 <h5 class="offcanvas-title mt-3">Shopping Bag</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
-              <div class="offcanvas-body">
-                <div class="row product-add1 mb-3">
-                  <div class="col-4 ps-0">
-                    <a routerLink="#">
-                      <img src="assets/img/product-detail/add-product1.png">
-                    </a>
+
+
+              <div class="container" *ngIf="cartItem.length === 0">
+                <p class="ml-3">Your bag is currently empty.</p>
+              </div>
+              <div class="container" *ngIf="cartItem.length > 0">
+                <div class="offcanvas-body" *ngIf="added">
+                  <div class="line mb-3"></div>
+                  <div class="row product-add1 mb-3">
+                    <div class="col-4 ps-0">
+                      <a routerLink="/product-detail/{{added.pid}}">
+                        <img src="{{added.thumb}}">
+                      </a>
+                    </div>
+                    <div class="col-5">
+                      <h6>{{added.name}}</h6>
+                    </div>
+                    <div class="col-3 pe-0">
+                      <button class="qty-btn" (click)="downQty()">-</button>
+                      <span class="mx-2">{{qty}}</span>
+                      <button class="qty-btn" (click)="upQty()">+</button>
+                      <p class="mt-2">{{added.price | currency: 'USD'}}</p>
+                      <i (click)="deleteItem(item)" class="fas fa-trash-alt trash"></i>
+                    </div>
                   </div>
-                  <div class="col-5">
-                    <p>Amel Earring</p>
+
+                  <div class="line mb-3"></div>
+                  <div class="d-flex mb-3">
+                    <p class="mdt me-auto">Total</p>
+                    <p class="mdt">{{total | currency: 'USD'}}</p>
                   </div>
-                  <div class="col-3 pe-0">
-                    x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
-                    <p>$5,000.00</p>
-                    <i class="fas fa-trash-alt"></i>
-                  </div>
-                </div>
-                <div class="line mb-3"></div>
-                <div class="row product-add2 mb-3">
-                  <div class="col-4 ps-0">
-                    <a routerLink="#">
-                      <img src="assets/img/product-detail/add-product2.png">
-                    </a>
-                  </div>
-                  <div class="col-5">
-                    <p>Diamons And Gold Spark Ring</p>
-                  </div>
-                  <div class="col-3 pe-0">
-                    x<input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="1">
-                    <p>$6,700.00</p>
-                    <i class="fas fa-trash-alt"></i>
-                  </div>
-                </div>
-                <div class="line mb-3"></div>
-                <div class="d-flex mb-3">
-                  <p class="mdt me-auto">Total</p>
-                  <p class="mdt">$11,700.00</p>
-                </div>
-                <div class="row">
-                  <div class="col-6 ps-0">
-                    <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View bag</button>
-                  </div>
-                  <div class="col-6 pe-0">
-                    <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
+                  <div class="row">
+                    <div class="col-6 ps-0">
+                      <button class="btn btn-sec btnlg mt-3 w-100" type="button" routerLink="/cart">View bag</button>
+                    </div>
+                    <div class="col-6 pe-0">
+                      <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/check-out">Checkout</button>
+                    </div>
                   </div>
                 </div>
               </div>
+
+
             </div>
           </div>
         </form>
@@ -303,26 +303,26 @@
                     <input type="submit" class="btn btn-pri btnsm w-100" value="Add to bag">
                   </form>
                 </div>
-                <div class="col-6 simi-right" *ngIf="comparedProduct">
+                <div class="col-6 simi-right" *ngIf="compared">
                   <div class="itm">
-                    <a routerLink="/product-detail/{{comparedProduct.pid}}">
-                      <img src="{{comparedProduct.thumb}}">
+                    <a routerLink="/product-detail/{{compared.pid}}">
+                      <img src="{{compared.thumb}}">
                     </a>
                     <div class="item-inf text-center">
-                      <p class="mdt my-2">{{item.name}}</p>
-                      <p class="">{{comparedProduct.price | currency: 'USD'}}</p>
+                      <p class="mdt my-2">{{compared.name}}</p>
+                      <p class="">{{compared.price | currency: 'USD'}}</p>
                     </div>
                   </div>
                   <div class="jewel">
                     <p class="mdt mb-1">Jewellery</p>
-                    <p class="smt my-2">{{comparedProduct.jewellery_type}}</p>
+                    <p class="smt my-2">{{compared.jewellery_type}}</p>
                     <p class="smt my-2">2.5mm width x2</p>
                     <p class="smt mb-0">Carat total weight .50</p>
                   </div>
                   <div class="line my-2"></div>
                   <div class="mater">
                     <p class="mdt mb-1">Material</p>
-                    <p class="smt">{{comparedProduct.material}}</p>
+                    <p class="smt">{{compared.material}}</p>
                   </div>
                   <div class="line mb-3"></div>
 
@@ -592,3 +592,4 @@
     </div>
   </div>
 </div>
+</ng-template>
