--- a/src/app/pages/check-out/check-out.component.html
+++ b/src/app/pages/check-out/check-out.component.html
@@ -68,14 +68,11 @@
             <li class="col-2 px-0" tabindex="0"><img src="./assets/img/check-out/PayPal.png"/></li>
             <li class="col-2 px-0" tabindex="0"><img src="./assets/img/check-out/Visa.png"/></li>
           </ul>
-          <div class="px-0 user-input">
+          <div class="px-0 user-input mb-3">
             <label>Card number (*)</label>
             <input class="inpu" type="text" required>
           </div>
-          <div class="px-0 number-on-card user-input">
-            <label>Number on card (*)</label>
-            <input class="inpu" type="number" required>
-          </div>
+
           <div class="row">
             <div class="col-6 ps-0">
               <label>Expire date</label>
