--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -200,15 +200,8 @@
               </div>
               <div class="line mb-3"></div>
               <div class="d-flex">
-                <a class="me-auto" href="#">
+                <a class="me-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#chatonline">
                   <p class="mdt">Chat Online</p>
-                </a>
-                <i class="fa-solid fa-chevron-right"></i>
-              </div>
-              <div class="line mb-3"></div>
-              <div class="d-flex">
-                <a class="me-auto" href="#">
-                  <p class="mdt">Book A Appointment</p>
                 </a>
                 <i class="fa-solid fa-chevron-right"></i>
               </div>
@@ -592,4 +585,27 @@
     </div>
   </div>
 </div>
+
+  <!--OFFCANVSS chat online-->
+  <div class="offcanvas offcanvas-end" id="chatonline">
+    <div class="offcanvas-header">
+      <i class="fa-solid fa-arrow-left" type="button" data-bs-toggle="offcanvas" data-bs-target="#askadvisor"></i>
+      <h5 class="offcanvas-title mt-3">Aguri At Your Service</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <div class="imessage">
+        <p class="from-them mb-3">Welcome to Aguri.</p>
+        <p class="from-them mb-3">How can we assist you today?</p>
+      </div>
+    </div>
+    <div class="line"></div>
+    <div class="doc-bottom">
+      <form>
+        <div class="dock-input">
+          <textarea id="messinput" rows="1" wrap="soft" placeholder="type your message" aria-label="type your message"></textarea>
+        </div>
+      </form>
+    </div>
+  </div>
 </ng-template>
