--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -484,7 +484,7 @@
           <i class="fa-regular fa-truck fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Complimentary Shipping & Returns</p>
           <p class="smt">We offer complimentary shipping and returns on all AGURI’s order</p>
-        <a class="decor-text" routerLink="#">Learn more <i class="fa-solid fa-arrow-right"></i></a>
+        <a class="decor-text" routerLink="/return">Learn more <i class="ps-2 fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-4 text-center">
@@ -492,7 +492,7 @@
           <i class="fa-regular fa-calendar fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Aguri At Your Service</p>
           <p class="smt">Our client care experts are always here to help.</p>
-           <a class="decor-text" routerLink="/contact">Contact us<i class="fa-solid fa-arrow-right"></i></a>
+           <a class="decor-text" routerLink="/contact">Contact us<i class="ps-2 fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
       <div class="col-4 text-center pe-0">
@@ -500,7 +500,7 @@
           <i class="fa-regular fa-gift fa-2x"></i>
           <p class="mdt mb-0 mt-3 mb-2">Free Gift Wrapping</p>
           <p class="smt">Your purchase comes wrapped in our Special Box packaging</p>
-        <a class="decor-text" routerLink="#">Explore gift <i class="fa-solid fa-arrow-right"></i></a>
+        <a class="decor-text" routerLink="#">Explore gift <i class="ps-2 fa-solid fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
@@ -627,5 +627,5 @@
 
 <!--Back to top-->
 <div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
-  <span>Back to top</span><i class="fa fa-arrow-circle-up fa-3x"></i>
+  <i class="fa fa-arrow-circle-up fa-3x"></i>
 </div>
