--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -138,4 +138,8 @@ p.from-them::after {
   resize: none;
   box-shadow: none;
 }
+p[class^="from-"] {
+  margin: 0.5rem 0;
+  width: fit-content;
+}
 
