--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -168,7 +168,7 @@
         <ul>
           <li><p class="mdt">More</p></li>
           <li class="mb-2">Size guide</li>
-          <li class="mb-2">Shipping & Returns</li>
+          <li class="mb-2"><a routerLink="/return">Shipping & Returns</a></li>
           <li class="mb-2">Product care & Repair</li>
         </ul>
       </div>
