--- a/src/app/pages/check-out/check-out.component.css
+++ b/src/app/pages/check-out/check-out.component.css
@@ -34,6 +34,7 @@ div.sticky{
 ul.pay li:focus{
   border: 1px solid blue;
   outline: blue solid 1px;
+  border-radius: 14px;
 }
 ul.pay li{
  margin-right: 12.5px;
