--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -23,17 +23,17 @@
         <img src="assets/img/product-detail/bag-prd1.png">
       </div>
       <div class="col-3">
-        <p>AMEL EARRING</p>
+        <p>Amel Earring</p>
       </div>
       <div class="col-2">
-        <p>6</p>
+        <p>-</p>
       </div>
-      <div class="col-2"></div>
+      <div class="col-2">x 1</div>
       <div class="col-2">
         <p>$6,700</p>
       </div>
       <div class="col">
-        <i class="fa-solid fa-xmark"></i>
+        <i class="fas fa-trash-alt trash"></i>
       </div>
     </div>
     <div class="line my-3"></div>
@@ -42,17 +42,17 @@
         <img src="assets/img/product-detail/bag-prd2.png">
       </div>
       <div class="col-3">
-        <p>AMEL EARRING</p>
+        <p>Lavie Ring</p>
       </div>
       <div class="col-2">
-        <p>6</p>
+        <p>-</p>
       </div>
-      <div class="col-2"></div>
+      <div class="col-2">x 1</div>
       <div class="col-2">
-        <p>$6,700</p>
+        <p>$5,000</p>
       </div>
       <div class="col">
-        <i class="fa-solid fa-xmark"></i>
+        <i class="fas fa-trash-alt trash"></i>
       </div>
     </div>
     <div class="line my-3"></div>
