--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -627,5 +627,5 @@
 
 <!--Back to top-->
 <div class="to-top" (click)="scrollToTop()" [ngClass]="{ 'show-scrollTop': windowScrolled }">
-  <i class="fa fa-arrow-circle-up fa-3x"></i>
+  Back to top<i class="fa fa-arrow-circle-up fa-3x"></i>
 </div>
