--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -174,7 +174,7 @@
 
         <div class="ask-advisor">
           <button class="btn btn-sec btnlg w-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#askadvisor">Ask A Client Advisor</button>
-          <!--OFFCANVSS ASK ADVISOR-->
+          <!--OFFCANVAS ASK ADVISOR-->
           <div class="offcanvas offcanvas-end" id="askadvisor">
             <div class="offcanvas-header">
               <h5 class="offcanvas-title mt-3">Aguri At Your Service</h5>
