--- a/src/app/pages/check-out/check-out.component.html
+++ b/src/app/pages/check-out/check-out.component.html
@@ -92,7 +92,7 @@
             <h5 class="text-center mb-3">BILLING SUMMARY</h5>
             <div class="row">
               <div class="col-10 ps-0">
-                <p>Diamonds and Gold Spark Ring</p>
+                <p>Amel Earring</p>
               </div>
               <div class="col-2 pe-0">
                 <p>$6,700</p>
@@ -101,7 +101,7 @@
             <p>x1</p>
             <div class="row">
               <div class="col-10 ps-0">
-                <p>Diamonds and Gold Spark Ring</p>
+                <p>Lavie Ring</p>
               </div>
               <div class="col-2 pe-0">
                 <p>$5,000</p>
