--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="col"></div>
       <div class="col-6 contact-form">
-        <form onsubmit="alert('Thank you for your message!! We will contact you soon.')">
+        <form ngNativeValidate onsubmit="alert('Thank you for your message!! We will contact you soon.')">
           <div class="row name-user">
             <div class="col-6 firstname ps-0">
               <label>First name</label>
