--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -26,7 +26,7 @@
       <!--category-side-->
       <div class="category-side-bar col-2">
         <div class="sticky ">
-          <form>
+          <form ngNativeValidate>
             <div class="mb-1">
               <p class="font-weight-bolder mb-3">Collection</p>
               <input type="checkbox" class="check-box" id="collection-1" name="collection-1" value="Sping Collection">
@@ -176,26 +176,29 @@
                   <div class="col-5 pe-0">
                     <h5>{{quickviewed.name}}</h5>
                     <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
-                    <form onsubmit="alert('The product was successfully added to bag!!')">
+                    <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
                       <div class="d-flex">
                         <p class="mdt me-auto">Quantity</p>
                         <span class="buttons_added ml-1 qty-box">
-                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+                 <input aria-label="quantity" class="text-center" max="100" min="1" name="" type="number" value="" required>
                </span>
                       </div>
-                      <div class="line"></div>
-                      <div class="quick-size my-3">
-                        <select class="form-select smt" required>
-                          <option value="">Select size</option>
-                          <option value="1">3</option>
-                          <option value="2">3 1/2</option>
-                          <option value="3">4</option>
-                          <option value="4">4 1/2</option>
-                          <option value="5">5</option>
-                          <option value="6">5 1/2</option>
-                        </select>
+                      <div  class="line"></div>
+                      <div>
+                        <div class="quick-size my-3">
+                          <select class="form-select smt" required>
+                            <option value="">Select size</option>
+                            <option value="1">3</option>
+                            <option value="2">3 1/2</option>
+                            <option value="3">4</option>
+                            <option value="4">4 1/2</option>
+                            <option value="5">5</option>
+                            <option value="6">5 1/2</option>
+                            <option value="7">-</option>
+                          </select>
+                        </div>
                       </div>
-                      <input type="submit" class="btn btn-pri my-3" value="Add to bag" data-bs-dismiss="modal">
+                      <input type="submit" class="btn btn-pri my-3" value="Add to bag">
                     </form>
                     <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
                       <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
