--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -38,7 +38,7 @@
         <p class="mdt">Complimentary Shipping & Returns</p>
         <div class="line mb-3"></div>
 
-        <form (submit)="addToCart(item)">
+        <form ngNativeValidate (submit)="addToCart(item)">
           <div class=d-flex>
             <p class="mdt me-auto">Quantity</p>
             <span class="buttons_added ml-1 qty-box">
@@ -58,6 +58,7 @@
               <option value="4">4 1/2</option>
               <option value="5">5</option>
               <option value="6">5 1/2</option>
+              <option value="7">-</option>
             </select>
           </div>
           <div class="line my-3"></div>
@@ -275,7 +276,7 @@
                   </div>
                   <div class="line mb-3"></div>
 
-                  <form onsubmit="alert('The product was successfully added to bag!!')">
+                  <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
                     <div class="d-flex">
                       <p class="mdt me-auto">Quantity</p>
                       <span class="buttons_added ml-1 qty-box">
@@ -291,6 +292,7 @@
                         <option value="4">4 1/2</option>
                         <option value="5">5</option>
                         <option value="6">5 1/2</option>
+                        <option value="7">-</option>
                       </select>
                     </div>
                     <input type="submit" class="btn btn-pri btnsm w-100" value="Add to bag">
@@ -319,7 +321,7 @@
                   </div>
                   <div class="line mb-3"></div>
 
-                  <form onsubmit="alert('The product was successfully added to bag!!')">
+                  <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
                     <div class="d-flex">
                       <p class="mdt me-auto">Quantity</p>
                       <span class="buttons_added ml-1 qty-box">
@@ -335,6 +337,7 @@
                         <option value="4">4 1/2</option>
                         <option value="5">5</option>
                         <option value="6">5 1/2</option>
+                        <option value="7">-</option>
                       </select>
                     </div>
                     <input type="submit" class="btn btn-pri btnsm w-100" value="Add to bag">
@@ -448,26 +451,29 @@
           <div class="col-5 pe-0">
             <h5>{{quickviewed.name}}</h5>
             <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
-            <form onsubmit="alert('The product was successfully added to bag!!')">
+            <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
               <div class="d-flex">
                 <p class="mdt me-auto">Quantity</p>
                 <span class="buttons_added ml-1 qty-box">
-                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
-               </span>
+               <input aria-label="quantity" class="text-center" max="100" min="1" name="" type="number" value="" required>
+             </span>
               </div>
-              <div class="line"></div>
-              <div class="quick-size my-3">
-                <select class="form-select smt" required>
-                  <option value="">Select size</option>
-                  <option value="1">3</option>
-                  <option value="2">3 1/2</option>
-                  <option value="3">4</option>
-                  <option value="4">4 1/2</option>
-                  <option value="5">5</option>
-                  <option value="6">5 1/2</option>
-                </select>
+              <div  class="line"></div>
+              <div>
+                <div class="quick-size my-3">
+                  <select class="form-select smt" required>
+                    <option value="">Select size</option>
+                    <option value="1">3</option>
+                    <option value="2">3 1/2</option>
+                    <option value="3">4</option>
+                    <option value="4">4 1/2</option>
+                    <option value="5">5</option>
+                    <option value="6">5 1/2</option>
+                    <option value="7">-</option>
+                  </select>
+                </div>
               </div>
-              <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag"  data-bs-dismiss="modal">
+              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
             </form>
             <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
@@ -607,7 +613,7 @@
     </div>
     <div class="line"></div>
     <div class="doc-bottom">
-      <form>
+      <form ngNativeValidate>
         <div class="dock-input">
           <textarea id="messinput" rows="1" wrap="soft" placeholder="type your message" aria-label="type your message"></textarea>
         </div>
