--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -387,28 +387,31 @@
             <div class="col-5 pe-0">
               <h5>{{quickviewed.name}}</h5>
               <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
-              <form onsubmit="alert('The product was successfully added to bag!!')">
+              <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
                 <div class="d-flex">
                   <p class="mdt me-auto">Quantity</p>
                   <span class="buttons_added ml-1 qty-box">
-                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
+                 <input aria-label="quantity" class="text-center" max="100" min="1" name="" type="number" value="" required>
                </span>
                 </div>
-                <div class="line"></div>
-                <div class="quick-size my-3">
-                  <select class="form-select smt" required>
-                    <option value="">Select size</option>
-                    <option value="1">3</option>
-                    <option value="2">3 1/2</option>
-                    <option value="3">4</option>
-                    <option value="4">4 1/2</option>
-                    <option value="5">5</option>
-                    <option value="6">5 1/2</option>
-                  </select>
+                <div  class="line"></div>
+                <div>
+                  <div class="quick-size my-3">
+                    <select class="form-select smt" required>
+                      <option value="">Select size</option>
+                      <option value="1">3</option>
+                      <option value="2">3 1/2</option>
+                      <option value="3">4</option>
+                      <option value="4">4 1/2</option>
+                      <option value="5">5</option>
+                      <option value="6">5 1/2</option>
+                      <option value="7">-</option>
+                    </select>
+                  </div>
                 </div>
-                <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag">
+                <input type="submit" class="btn btn-pri my-3" value="Add to bag">
               </form>
-              <p class="mt-2">View more detail <a class="ms-5" routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
+              <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
                 <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
               </a></p>
             </div>
